Agent query: Please click the "Clear Local Storage" button, confirm the action by typing "delete", and let me know if the local storage is cleared successfully and if you see any error messages in the console.

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "NoctuTrack",
+  "name": "NoctuTrack: Nocturia Bathroom Tracker",
   "short_name": "NoctuTrack",
-  "description": "Nocturia Bathroom Tracker",
+  "description": "A mobile-friendly app for tracking nocturia and related data",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#f0f8ff",
