--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,20 +8,14 @@
   "theme_color": "#1e90ff",
   "icons": [
     {
-      "src": "/static/img/favicon.ico",
-      "sizes": "48x48",
-      "type": "image/x-icon"
-    },
-    {
       "src": "/static/img/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/static/img/icon.svg",
+      "src": "/static/img/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
