--- a/static/manifest.json
+++ b/static/manifest.json
@@ -8,14 +8,14 @@
   "theme_color": "#1e90ff",
   "icons": [
     {
-      "src": "/static/img/icon-192x192.png",
+      "src": "/static/img/icon-192x192.svg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/svg+xml"
     },
     {
-      "src": "/static/img/icon-512x512.png",
+      "src": "/static/img/icon-512x512.svg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/svg+xml"
     }
   ]
 }
